@@ -24,6 +24,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #3835: Refuse to use unthreaded Tcl in threaded Python.
+
 - Issue #2843: Add new Tk API to Tkinter.
 
 - Issue #14184: Increase the default stack size for secondary threads on
